// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`send-message sends back status 410 when sending message to dead interaction 1`] = `
Object {
  "body": Object {
    "message": "Sending Message to dead interaction",
  },
  "status": 410,
}
`;

exports[`send-message sends back status 500 when there is a error retrieving cx credentials 1`] = `
Object {
  "body": Object {
    "message": "An Error has occurred trying to retrieve cx credentials",
  },
  "status": 500,
}
`;

exports[`send-message sends back status 500 when there is a error retrieving digital channels credentials 1`] = `
Object {
  "body": Object {
    "message": "An Error has occurred trying to retrieve digital channels credentials",
  },
  "status": 500,
}
`;

exports[`send-message sends back status 500 when there is a error retrieving the interaction metadata 1`] = `
Object {
  "body": Object {
    "message": "An error occurred retrieving the interaction metadata",
  },
  "status": 500,
}
`;

exports[`send-message sends back status 500 when there is a error sending message 1`] = `
Object {
  "body": Object {
    "message": "An error occurred sending message",
  },
  "status": 500,
}
`;

exports[`send-message sends back status 500 when there is an error retrieving digital channels credentials (thrown by SmoochCore) 1`] = `
Object {
  "body": Object {
    "message": "An Error has occurred trying to retrieve digital channels credentials",
  },
  "status": 500,
}
`;
